# projeto_loja_varejao

./: README.md  main.py  pyproject.toml
database/: database.py  schema.py
faker/: gerar_dados.py  produtos.csv
models/: models.py
